src/core-crm/objects/Program_Enrollment_Award__c/Program_Enrollment_Award__c.object-meta.xml
<CustomObject>
    <description>Program Enrollment Award stores information about student award(s).</description>
    <label>Program Enrollment Award</label>
    <nameField>
        <label>Program Enrollment Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Enrollment Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>