src/core-crm/objects/Program_Enrollment_Award__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Approval Date for the Award.</description>
    <inlineHelpText>Approval Date for the Award.</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>