src/core-crm/objects/Program_Enrollment_Award__c/fields/Conferral_Date__c.field-meta.xml
<CustomField>
    <fullName>Conferral_Date__c</fullName>
    <description>Conferral Date for the Award.</description>
    <inlineHelpText>Conferral Date for the Award.</inlineHelpText>
    <label>Conferral Date</label>
    <type>Date</type>
</CustomField>