src/core-crm/objects/Program_Enrollment_Award__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>PEA-{000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>