src/core-crm/objects/Program_Enrollment_Award__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <description>Lookup to Program Enrollment.</description>
    <inlineHelpText>Lookup to Program Enrollment.</inlineHelpText>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Program Enrollment Awards</relationshipLabel>
    <relationshipName>Program_Enrollment_Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>