src/core-crm/objects/Program_Enrollment_Award__c/fields/Rescinded_Date__c.field-meta.xml
<CustomField>
    <fullName>Rescinded_Date__c</fullName>
    <description>Date the Award is rescinded.</description>
    <inlineHelpText>Date the Award is rescinded.</inlineHelpText>
    <label>Rescinded Date</label>
    <type>Date</type>
</CustomField>