src/core-crm/objects/Program_Enrollment_Award__c/fields/Rescinded_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rescinded_Reason__c</fullName>
    <description>Reason the Award was rescinded.</description>
    <inlineHelpText>Reason the Award was rescinded.</inlineHelpText>
    <label>Rescinded Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>